src/test/ui/specialization-feature-gate-default.stderr
error[E0658]: specialization is unstable (see issue #31844)
  --> $DIR/specialization-feature-gate-default.rs:20:5
   |
20 |     default fn foo(&self) {} //~ ERROR specialization is unstable
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(specialization)] to the crate attributes to enable

error: aborting due to previous error

